fix(toggle, modal): correction z-index de toggle [DS-2385] (#213)

--- a/src/core/style/spacing/setting/_z-index.scss
+++ b/src/core/style/spacing/setting/_z-index.scss
@@ -12,14 +12,17 @@ $z-indexes: (
   base: 0,
   over: 1,
   above: 2,
-  focus: 2000,
-  menu: 2500,
-  menu-focus: 3000,
-  nav: 3500,
-  nav-focus: 4000,
-  consent: 4500,
-  consent-focus: 5000,
-  modal: 5500,
-  modal-focus: 6000,
-  modal-footer: 6500,
+  focus: 500,
+  higher: 1000,
+  higher-focus: 1500,
+  menu: 2000,
+  menu-focus: 2500,
+  nav: 3000,
+  nav-focus: 3500,
+  consent: 4000,
+  consent-focus: 4500,
+  modal: 5000,
+  modal-focus: 5500,
+  modal-footer: 6000,
+  modal-footer-focus: 6500,
 );
